style.css
body {
    background: url("./images/bg-top.svg") no-repeat;
    background-position: 115px -50px;
    background-color: hsl(240, 78%, 94%)
}

#checkbox-container {
    /* border: 1px solid red; */
    width: 100%;
    font-size: 14px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

#header {
    /* contains header-title & checkbox-container */
    width: 90%;
    height: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#header * {
    font-family: "Montserrat", sans-serif;
}

#header-title {
    width: 100%;
    height: 40px;
    font-size: 20px;
    text-align: center;
}

#pricing-cards {
    width: 90%;
}

#purple-card {
    /* background-color: hsl(232, 13%, 33%) */
    background: linear-gradient(135deg, hsl(236, 72%, 79%), hsl(237, 63%, 64%))
}

.card {
    background-color: #FFFFFF;
    border-radius: 10px;
    max-width: 360px;
    margin: 5px;
    padding: 5px;
    height: 330px;
    text-align: center;
}

.container {
    text-align: center;
    height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* border: 1px solid red; */
}

.feature {
    border-top: 1px solid #DDDDDD;
    border-bottom: 1px solid #DDDDDD;
    height: 30px;
    width: 80%;
    text-align: center;
    font-family: "Montserrat", sans-serif;
    font-size: 14px;
    display: inline-block;
}

.feature div {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.features {
    margin: 20px;
}

.features div {
    /* display: flex;
    flex-direction: column;
    justify-content: space-around; */
    text-align: center;
}

.learn-more {
    padding: 10px;
    width: 80%;
    border-radius: 5px;
    font-family: "Montserrat", sans-serif;
    display: inline-block;
}

.pricing span {
    font-family: "Montserrat", sans-serif;
    font-size: 60px;
}

.purple {
    background: linear-gradient(135deg, hsl(236, 72%, 79%), hsl(237, 63%, 64%))
}

.purple:active {
    background: #FFFFFF;
    color: hsl(237, 63%, 64%);
    border: 1px solid hsl(237, 63%, 64%);
}

.tier-name p {
    font-family: 'Montserrat', sans-serif;
}

.white {
    background: #FFFFFF;
}

.white:active {
    background: hsl(237, 63%, 64%);
    color: #FFFFFF;
    /* border: 2px solid hsl(237, 63%, 64%); */
    border: 1px solid hsl(237, 63%, 64%);
}

/* @media screen and (min-width: 376px) {

} */

/* ### ### ### ### ### ### ### ### */
/* Copied From StackOverflow */
/* ### ### ### ### ### ### ### ### */

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

